tests/ui/closures/binder/type-bound-2.stderr
error: late-bound type parameter not allowed on closures
  --> $DIR/type-bound-2.rs:4:9
   |
LL |     for<T> || -> () {};
   |         ^

error: aborting due to 1 previous error

